--- a/style.css
+++ b/style.css
@@ -197,8 +197,8 @@ nav a{
         to top,
         #FFFFFF00 0%,
         #FFFFFF00 15%,
-        #D1E3E5 15%,
-        #D1E3E5 85%,
+        #373D20 15%,
+        #373D20 85%,
         #FFFFFF00 85%,
         #FFFFFF00 100%
     );
@@ -218,7 +218,7 @@ nav a{
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color:#D1E3E5;
+    background-color:#373D20;
 }
 
 .section1_background1 a, .section1_background a{
@@ -258,7 +258,7 @@ nav a{
     align-items: center;
     width: 100%;
     height: 100%;
-    background: #D1E3E5;
+    background: #373D20;
 }
 
 .section3{
@@ -269,7 +269,7 @@ nav a{
     height: fit-content;
     padding: 56px 0;
     position: relative;
-    background-color: #222222;
+    background-color: #373D20;
     color: #FFFFFF;
 }
 
@@ -392,17 +392,20 @@ footer{
 .tags{
     width: fit-content;
     height: fit-content;
-    padding: 4px;
-    background: #ECE7D7;
+    padding: 2px 8px;
+    background: #EFF1ED;
     text-align: left;
-    border-radius: 6px;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 500px;
+    line-height: 18px;
 }
 
 .banner1{
     width: 60vw;
     max-width: 900px;
     height: 60vh;
-    background-color: #EEE7D7;
+    background-color: #EFF1ED;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -414,7 +417,7 @@ footer{
     width: 40vw;
     max-width: 540px;
     height: 20%;
-    background-color: #EEE7D7;
+    background-color: #Eff1ed;
     position: absolute;
     top: 0;
     right: 0;
@@ -426,7 +429,7 @@ footer{
     width: 50vw;
     max-width: 900px;
     height: 60vh;
-    background-color: #EEE7D7;
+    background-color: #Eff1ed;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -535,7 +538,7 @@ a, p{
     }
 
     .section2_background{
-        background-color: #D1E3E5;
+        background-color: #373D20;
     }
 
     .section2 .banner1{
@@ -686,8 +689,8 @@ a, p{
         width: 90vw;
         background: linear-gradient(
             to top,
-            #D1E3E5 0%,
-            #D1E3E5 75%,
+            #373D20 0%,
+            #373D20 75%,
             #FFFFFF00 75%,
             #FFFFFF00 100%
         );
@@ -709,7 +712,7 @@ a, p{
         align-items: center;
         height: fit-content;
         width: 90vw;
-        background-color: #D1E3E5;
+        background-color: #373D20;
         padding: 0 5%;
     }
 
@@ -842,7 +845,7 @@ a, p{
         width: 40vw;
         max-width: 320px;
         height: 160px;
-        background-color: #EEE7D7;
+        background-color: #Eff1ed;
     }
 
     #case_titles{
@@ -851,6 +854,18 @@ a, p{
         text-align: left;
         padding: 56px 0 0 5vw;
         max-width: 60vw;
+    }
+
+    .tags{
+        width: fit-content;
+        height: fit-content;
+        padding: 2px 8px;
+        background: #eff1ed;
+        text-align: left;
+        border-radius: 8px;
+        font-size: 12px;
+        font-weight: 40px;
+        line-height: 20px;
     }
 
     
@@ -1028,7 +1043,7 @@ a, p{
         width: 40vw;
         max-width: 240px;
         height: 104px;
-        background-color: #EEE7D7;
+        background-color: #Eff1ed;
     }
 
     #case_titles{
