--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     justify-content: space-between;
     gap: 0;
     overflow-x: hidden;
-    background-color: #F6FAFF;
+    background-color: #FDFFFF;
     color: #222222;
 }
 
@@ -18,7 +18,18 @@ body{
 header, body{
     height: fit-content;
     width: fit-content;
+    padding: 0;
+    margin: 0;
 }
+
+.card_holder{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: fit-content;
+    scroll-snap-type: y mandatory;
+}
+
 
 nav{
     display: flex;
@@ -29,10 +40,10 @@ nav{
     color: #222222;
     padding: 0 10%;
     position: fixed;
-    z-index: 5;
+    z-index: 6;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
     background-color: #FFFFFF;
-
+    margin: 0;
 }
 
 #logo_holder{
@@ -40,7 +51,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     width: fit-content;
-    height: 72px;
+    height: 64px;
 }
 
 #logo_holder a{
@@ -138,7 +149,7 @@ nav a{
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: calc(100vh - 72px);
+    height: calc(100vh - 64px);
     padding: 0 10%;
     position: relative;
 
@@ -182,7 +193,7 @@ nav a{
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: calc(100vh - 144px);
+    height: calc(100vh - 64px);
     max-height: 900px;
     padding: 0 10%;
     gap: 80px;
@@ -247,7 +258,7 @@ nav a{
     justify-content: space-between;
     align-items: center;
     width: 100vw;
-    height: calc(100vh - 72px);
+    height: calc(100vh - 64px);
     padding-left: 10%;
     gap: 80px;
     position: relative;
@@ -300,6 +311,7 @@ nav a{
     justify-content: center;
     align-items: center;
     height: fit-content;
+    width: fit-content;
     overflow-x: hidden;
     gap: 104px;
 }
@@ -314,11 +326,11 @@ footer{
     align-items: center;
     width: 100vw;
     height: fit-content;
-    padding: calc(10vh - 7.2px) 10%;
+    padding: calc(10vh - 6.4px) 10%;
     gap: 80px;
     position: relative;
     color: #222222;
-    background-color: #FDFFFF;
+    background-color: #fdffff;
     z-index: 5;
 }
 
@@ -402,9 +414,9 @@ footer{
 }
 
 .banner1{
-    width: 60vw;
-    max-width: 900px;
-    height: 60vh;
+    width: 45vw;
+    max-width: 600px;
+    height: 30vh;
     background-color: #EFF1ED;
     position: absolute;
     bottom: 0;
@@ -449,7 +461,6 @@ a, p{
     font-family: 'Urbanist', Arial, sans-serif;
     text-decoration: none;
     color: #222222;
-
 }
 
 h1{
@@ -483,6 +494,240 @@ a, p{
     font-weight: 500;
     line-height: 32px;
 }
+
+
+/*Case Study Template Starts*/
+
+.case_hero{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding-bottom: 80px;
+    width: 100vw;
+    height: fit-content;
+}
+
+.hero_image{
+    max-height: calc(100vh - 264px);
+    min-height: calc(100vh - 264px);
+    width: 100vw;
+    background-image: url(Image/clothesxo_case_mock.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.hero_title{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    max-width: 800px;
+    min-width: 630px;
+    padding: 12px 0 32px 0;
+}
+
+.hero_title p{
+    max-width:680px;
+}
+
+.hold{
+    height: 300px;
+    width: 100vw;
+    background-color: pink;
+}
+
+.cards{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: fit-content;
+    width: 100vw;
+    padding: 0 10vw;
+}
+
+.cards section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: left;
+    height: 160px;
+    width: 216px;
+    padding: 16px;
+    gap: 12px;
+    background-color: #EFF1ED;
+}
+
+.case_section1, .case_section2, .case_section3{
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    position: relative;
+    gap: 80px;
+}
+
+.case_section5{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    padding: 80px 10vw 0 10vw;
+    height: calc(100vh - 64px);
+    width: 100vw;
+    position: relative;
+}
+
+.case_section4{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 80px 20vw;
+    height: 85vh;
+    width: 100vw;
+}
+
+.case_section3, .case_section4{
+    background-color: #373D20;
+    color: #FFFFFF;
+}
+
+.case_section1, .case_section3{
+    height: calc(100vh - 64px);
+    justify-content: start;
+}
+
+.case_section2{
+    height: fit-content;
+    background-color: #373D20;
+    color: #FFFFFF;
+    justify-content: stretch;
+    padding: 80px 10vw;
+}
+
+.case_titles{
+    padding-top: 80px;
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    left: 10vw;
+    top: 0;
+}
+
+.case_titles p{
+    font-family: 'Urbanist', Arial, sans-serif;
+    text-decoration: none;
+    color: #222222;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 800;
+}
+
+.text1, .text2{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
+    text-align: left;
+    padding-left: 10vw;
+}
+
+.text1 h3, .text2 h3{
+    font-size: 32px;
+    font-weight: 40px;
+}
+
+.text1{
+    width: 80vw;
+    max-width: 900px;
+}
+
+.text2{
+    width: 500px;
+    max-width: none;
+}
+
+.case_section2 .text2{
+    padding: 0;
+}
+
+
+.image1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10vw;
+    width: 100%;
+    height: 100%;
+    background-color: #373D20;
+}
+
+.image2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #EFF1ED;
+}
+
+.grid1{
+    display: grid;
+    justify-content: stretch;
+    padding: 80px 10vw 80px 0;
+    width: 100%;
+    height: 100%;
+    gap: 32px;
+}
+
+.grid1 section{
+    background-color: #EFF1ED;
+}
+
+.grid2{
+    display: grid;
+    justify-content: stretch;
+    width: 100%;
+    height: 100%;
+    gap: 32px;
+}
+
+.grid2 section{
+    background-color: #EFF1ED;
+}
+
+.grid1_item1{
+    grid-area: 1 / 1 / 2 / 4;
+}
+
+.grid1_item2{
+    grid-area: 1 / 4 / 2 / 6;
+}
+
+.grid1_item3{
+    grid-area: 2 / 1 / 3 / 3;
+}
+
+.grid1_item4{
+    grid-area: 2 / 3 / 3 / 6;
+}
+
+.case_section3 .case_titles p, .case_section3 .text1 p{
+    background-color: none;
+    color: #FFFFFF;
+}
+
+ /* 
+    
+
+    */
+
+/*Case Study Template End*/
 
 
 @media screen and (max-width:1024px) {
@@ -572,6 +817,85 @@ a, p{
         max-width: 55vw;
     }
 
+
+    /*Case Study Template Starts 1024*/
+
+.hero_image{
+        min-height: calc(100vh - 284px);
+}
+
+.hero_title{
+    max-width: 680px;
+    min-width: 600px;
+    padding: 12px 0 32px 0;
+}
+
+.hero_title p{
+    max-width:560px;
+}
+
+.cards{
+    padding: 0 5vw;
+}
+
+.cards section{
+    height: 160px;
+    width: 200px;
+    padding: 16px;
+    gap: 12px;
+}
+
+.case_section1, .case_section2{
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    position: relative;
+    gap: 64px;
+}
+
+.case_section1, .case_section3{
+    justify-content: start;
+    height: calc(100vh - 64px);
+}
+
+.case_section2{
+    height: fit-content;
+    background-color: #373D20;
+    color: #FFFFFF;
+    justify-content: stretch;
+    padding: 80px 5vw;
+}
+
+.case_titles{
+    padding-top: 64px;
+    left: 5vw;
+}
+
+.text1{
+    padding-left: 5vw;
+    width: 80vw;
+    max-width: 900px;
+}
+
+.image1{
+    padding-left: 5vw;
+}
+
+
+.grid1{
+    padding: 64px 5vw 64px 5vw;
+    gap: 32px;
+}
+
+
+
+ /* 
+   
+
+    */
+
+/*Case Study Template End*/
+
 }
 
 
@@ -588,6 +912,7 @@ a, p{
     #logo_holder{
         display: flex;
         justify-content: space-between;
+        height: 72px;
         width: 100%;
     }
 
@@ -675,7 +1000,7 @@ a, p{
         justify-content: start;
         align-items: start;
         width: 100vw;
-        height: calc(100vh - 72px);
+        height: calc(100vh - 64px);
         padding: 0 5%;
         gap: 32px;
     }
@@ -730,7 +1055,7 @@ a, p{
         align-items: left;
         gap: 48px;
         position: relative;
-        padding-top: calc(10vh - 7.2px);
+        padding-top: calc(10vh - 6.4px);
     }
 
     .section2 .title2{
@@ -746,7 +1071,7 @@ a, p{
 
     .section3{
         align-items: start;
-        padding: calc(10vh - 7.2px) 5%;
+        padding: calc(10vh - 6.4px) 5%;
         position: relative;
     }
 
@@ -755,6 +1080,8 @@ a, p{
         justify-content: space-between;
         align-items: center;
         height: fit-content;
+        width: fit-content;
+        gap: 20vw;
     }
     
     #teams img{
@@ -763,9 +1090,11 @@ a, p{
     
     #teams2{
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
+        width: 200vw;
         height: fit-content;
+        gap: 56px;
     }
     
     #teams2 img{
@@ -779,7 +1108,7 @@ a, p{
         align-items: start;
         width: 100vw;
         height: fit-content;
-        padding: calc(10vh - 7.2px) 5%;
+        padding: calc(10vh - 6.4px) 5%;
         gap: 48px;
         position: relative;
         color: #222222;
@@ -895,18 +1224,171 @@ a, p{
     }
 
     a, p{
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 24px;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 32px;
     }
 
+    /*Case Study Template Starts 768px*/
+
+.hero_image{
+    max-height: calc(100vh - 264px);
+    min-height: calc(100vh - 264px);
+    width: 100vw;
+    background-image: url(Image/clothesxo_case_mock.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.hero_title{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    align-items: start;
+    justify-content: center;
+    padding: 12px 5vw 48px 5vw;
+    width: 100vw;
+    max-width: fit-content;
+    min-width: fit-content;
+}
+
+.case_section5 .hero_title{
+    width: 100ovw;
+    padding: 12px 5vw 48px 5vw;
+    max-width: none;
+    min-width: none;
+}
+
+
+.hold{
+    height: 300px;
+    width: 100vw;
+    background-color: pink;
+}
+
+.cards{
+    display: grid;
+    justify-content: stretch;
+    height: fit-content;
+    width: 100%;
+    gap: 24px;
+    padding: 0 5vw;
+}
+
+.cards section{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
+    text-align: left;
+    padding: 16px;
+    gap: 16px;
+    background-color: #EFF1ED;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.card1{
+    grid-area: 1 / 1 / 2 / 4;
+}
+
+.card2{
+    grid-area: 1 / 4 / 2 / 6;
+}
+
+.card3{
+    grid-area: 2 / 1 / 3 / 3;
+}
+
+.card4{
+    grid-area: 2 / 3 / 3 / 6;
+}
+
+.case_section1, .case_section3{
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: flex-start;
+    gap: 32px;
+}
+
+.case_section2{
+    flex-direction: column;
+    height: fit-content;
+    background-color: #373D20;
+    color: #FFFFFF;
+    justify-content: stretch;
+    align-items: flex-start;
+    padding: 80px 5vw;
+    gap: 32px;
+}
+
+.case_section4{
+    padding: 80px 10vw;
+    height: 60vh;
+    width: 100vw;
+}
+
+.case_section5{
+    padding: 80px 5vw;
+    height: calc(150vh - 64px);
+    width: 100vw;
+}
+
+.case_titles{
+    position: static;
+    padding: 48px 0 16px 5vw;
+    align-self: flex-start;
+    text-align: left;
+}
+
+.case_titles p{
+    font-family: 'Urbanist', Arial, sans-serif;
+    text-decoration: none;
+    color: #222222;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+}
+
+
+.text1{
+    padding-left: 5vw;
+    width: 100vw;
+    max-width: 640px;
+}
+
+.text1 h3, .text2 h3{
+    font-size: 32px;
+    font-weight: 48px;
+}
+
+.text2{
+    padding-left: 5vw;
+    padding-top: 80px;
+    width: 400px;
+    max-width: none;
+}
+
+
+.grid1{
+    padding: 0px 5vw 80px 5vw;
+    gap: 24px;
+}
+
+ /* 
+
+    */
+
+/*Case Study Template End* 768px*/
 
 }
 
 @media screen and (max-width: 430px) {
     
     #menu_container{
-        height: calc(100vh - 72px);
+        height: calc(100vh - 64px);
     }
     
     .hero, .section2, .section3{
@@ -937,7 +1419,7 @@ a, p{
         align-items: left;
         gap: 48px;
         position: relative;
-        padding: calc(10vh - 7.2px) 0 0 0;
+        padding: calc(10vh - 6.4px) 0 0 0;
     }
 
     .section2 .title2{
@@ -976,7 +1458,7 @@ a, p{
         align-items: start;
         width: 100vw;
         height: fit-content;
-        padding: calc(10vh - 7.2px) 5%;
+        padding: calc(10vh - 6.4px) 5%;
         gap: 24px;
         position: relative;
         color: #222222;
@@ -1015,14 +1497,6 @@ a, p{
         width: 80vw;
         max-width: 600px;
         padding: 0;
-    }
-    
-    .title4{
-        align-items: flex-start;
-        text-align: left;
-        width: 60vw;
-        max-width: 420px;
-        gap: 12px;
     }
 
     .banner3{
@@ -1074,9 +1548,70 @@ a, p{
     }
 
     a, p{
-        font-size: 12px;
-        font-weight: 300;
-        line-height: 18px;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 28px;
     }
 
+    /*Case Study Template Starts *430px*/
+
+    .case_section1, .case_section3{
+        flex-direction: column;
+        justify-content: stretch;
+        align-items: flex-start;
+        gap: 24px;
+    }
+
+    .case_section2{
+        gap: 24px;
+    }
+
+    .case_section4{
+        padding: 64px 5vw;
+        height: 65vh;
+        width: 100vw;
+    }
+    
+    .case_section5{
+        padding: 64px 5vw;
+        height: calc(150vh - 64px);
+        width: 100vw;
+        position: relative;
+    }
+
+    .case_titles{
+        position: static;
+        padding: 40px 0 16px 5vw;
+    }
+    
+    .case_titles p{
+        font-size: 14px;
+        line-height: 16px;
+        font-weight: 600;
+    }
+    
+    .text1{
+        padding-left: 5vw;
+        width: 100vw;
+        max-width: none;
+    }
+
+    .text1 h3{
+        font-size: 24px;
+        font-weight: 40px;
+    }
+
+    .text2{
+        padding-top: 48px;
+        width: 100vw;
+        max-width: none;
+    }
+
+    .text2 h3{
+        font-size: 24px;
+        font-weight: 40px;
+    }
+    
+    
+    /*Case Study Template Ends *430px*/
 }
