--- a/style.css
+++ b/style.css
@@ -173,7 +173,6 @@ nav a{
     align-items: flex-start;
     text-align: left;
     padding: 104px 0 0 10vw;
-    gap: 8px;
     height: fit-content;
     max-width: 50vw;
 }
@@ -331,7 +330,7 @@ footer{
     position: relative;
     color: #222222;
     background-color: #fdffff;
-    z-index: 5;
+    z-index: 7;
 }
 
 
@@ -575,21 +574,25 @@ a, p{
     justify-content: flex-start;
     align-items: center;
     text-align: center;
-    padding: 80px 10vw 0 10vw;
+    padding: 80px 10vw;
     height: calc(100vh - 64px);
     width: 100vw;
     position: relative;
 }
 
+.case_section5 .hero_title{
+    padding: 0 0 32px 0;
+}
+
 .case_section4{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    text-align: center;
-    padding: 80px 20vw;
-    height: 85vh;
+    text-align: left;
+    padding: 80px 10vw;
+    height: 60vh;
     width: 100vw;
+    gap: 80px;
 }
 
 .case_section3, .case_section4{
@@ -619,6 +622,11 @@ a, p{
     top: 0;
 }
 
+.case_section5 .case_titles{
+    padding-top: 88px;
+}
+
+
 .case_titles p{
     font-family: 'Urbanist', Arial, sans-serif;
     text-decoration: none;
@@ -637,7 +645,8 @@ a, p{
     padding-left: 10vw;
 }
 
-.text1 h3, .text2 h3{
+
+.text1 h3, .text2 h3, .text3 h3{
     font-size: 32px;
     font-weight: 40px;
 }
@@ -652,7 +661,19 @@ a, p{
     max-width: none;
 }
 
-.case_section2 .text2{
+.text3{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 300px;
+    padding-left: 10vw;
+}
+
+.text3 h3{
+    padding-top: 0;
+}
+
+.case_section2 .text2, .case_section4 .text3{
     padding: 0;
 }
 
@@ -673,7 +694,6 @@ a, p{
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: #EFF1ED;
 }
 
 .grid1{
@@ -695,6 +715,7 @@ a, p{
     width: 100%;
     height: 100%;
     gap: 32px;
+    padding: 0 10vw;
 }
 
 .grid2 section{
@@ -717,9 +738,33 @@ a, p{
     grid-area: 2 / 3 / 3 / 6;
 }
 
+.grid2_item1{
+    grid-area: 1 / 1 / 3 / 4;
+}
+
+.grid2_item2{
+    grid-area: 1 / 4 / 3 / 7;
+}
+
+.grid2_item3{
+    grid-area: 3 / 1 / 5 / 3;
+}
+
+.grid2_item4{
+    grid-area: 3 / 3 / 5 / 5;
+}
+
+.grid2_item5{
+    grid-area: 3 / 5 / 5 / 7;
+}
+
 .case_section3 .case_titles p, .case_section3 .text1 p{
     background-color: none;
     color: #FFFFFF;
+}
+
+.clothes_xo{
+    background-color: #500084;
 }
 
  /* 
@@ -830,6 +875,12 @@ a, p{
     padding: 12px 0 32px 0;
 }
 
+.case_section5 .hero_title{
+    max-width: 60vw;
+    min-width: 500px;
+    padding: 12px 0 32px 0;
+}
+
 .hero_title p{
     max-width:560px;
 }
@@ -866,6 +917,16 @@ a, p{
     padding: 80px 5vw;
 }
 
+.case_section5{
+    padding: 80px 5vw;
+}
+
+.case_section4{
+    padding: 80px 5vw;
+    height: 60vh;
+    gap: 64px;
+}
+
 .case_titles{
     padding-top: 64px;
     left: 5vw;
@@ -875,6 +936,16 @@ a, p{
     padding-left: 5vw;
     width: 80vw;
     max-width: 900px;
+}
+
+.text2{
+    padding-left: 5vw;
+}
+
+.text3{
+    display: flex;
+    width: 300px;
+    padding-left: 5vw;
 }
 
 .image1{
@@ -887,6 +958,13 @@ a, p{
     gap: 32px;
 }
 
+.grid2{
+    padding: 0;
+}
+
+.clothes_xo{
+    background-color: #500084;
+}
 
 
  /* 
@@ -1253,9 +1331,13 @@ a, p{
     min-width: fit-content;
 }
 
+.hero_title p{
+    max-width: 400px;
+}
+
 .case_section5 .hero_title{
-    width: 100ovw;
-    padding: 12px 5vw 48px 5vw;
+    width: 500px;
+    padding: 12px 0 48px 0;
     max-width: none;
     min-width: none;
 }
@@ -1308,7 +1390,7 @@ a, p{
 
 .case_section1, .case_section3{
     flex-direction: column;
-    justify-content: stretch;
+    justify-content: start;
     align-items: flex-start;
     gap: 32px;
 }
@@ -1325,15 +1407,23 @@ a, p{
 }
 
 .case_section4{
-    padding: 80px 10vw;
+    flex-direction: column;
+    padding: 80px 5vw;
     height: 60vh;
-    width: 100vw;
+    gap: 32px;
+}
+
+.case_section4 .text3{
+    padding: 0 0 24px 0;
 }
 
 .case_section5{
     padding: 80px 5vw;
-    height: calc(150vh - 64px);
+    height: calc(100vh - 64px);
+
     width: 100vw;
+    align-items: flex-start;
+    text-align: left;
 }
 
 .case_titles{
@@ -1341,6 +1431,10 @@ a, p{
     padding: 48px 0 16px 5vw;
     align-self: flex-start;
     text-align: left;
+}
+
+.case_section5 .case_titles{
+    padding: 0 0 16px 0;
 }
 
 .case_titles p{
@@ -1366,9 +1460,14 @@ a, p{
 
 .text2{
     padding-left: 5vw;
-    padding-top: 80px;
     width: 400px;
     max-width: none;
+}
+
+.text3{
+    display: flex;
+    width: 90vw;
+    padding-left: 5vw;
 }
 
 
@@ -1377,12 +1476,85 @@ a, p{
     gap: 24px;
 }
 
+.grid2{
+    padding: 0;
+}
+
+
+.clothes_xo{
+    background-color: #500084;
+}
+
  /* 
 
     */
 
 /*Case Study Template End* 768px*/
 
+}
+
+@media screen and (max-width: 500px) {
+
+.case_section4{
+        min-height: 900px;
+    }
+
+.case_section1{
+        min-height: 1200px;
+    }
+    
+    .case_section5{
+        min-height: 1200px;
+        padding: 64px 5vw;
+        width: 100vw;
+    }
+    
+    .case_section5 .hero_title{
+        padding: 12px 0 48px 0;
+        width: auto;
+        max-width: 360px;
+        min-width: none;
+    }
+
+    .hero_title p{
+        max-width: 320px;
+    }
+    
+    .grid1_item1{
+        grid-area: 1 / 1 / 2 / 2;
+    }
+    
+    .grid1_item2{
+        grid-area: 2 / 1 / 3 / 2;
+    }
+    
+    .grid1_item3{
+        grid-area: 3 / 1 / 4 / 2;
+    }
+    
+    .grid1_item4{
+        grid-area: 4 / 1 / 5 / 2;
+    }
+    
+    .grid2_item1{
+        grid-area: 1 / 1 / 2 / 2;
+    }
+    
+    .grid2_item2{
+        grid-area: 2 / 1 / 3 / 2;
+    }
+    
+    .grid2_item3{
+        grid-area: 3 / 1 / 4 / 2;
+    }
+    
+    .grid2_item4{
+        grid-area: 4 / 1 / 5 / 2;
+    }
+    
+    .grid2_item5{
+        grid-area: 5 / 1 / 6 / 2;
+    }
 }
 
 @media screen and (max-width: 430px) {
@@ -1557,7 +1729,7 @@ a, p{
 
     .case_section1, .case_section3{
         flex-direction: column;
-        justify-content: stretch;
+        justify-content: start;
         align-items: flex-start;
         gap: 24px;
     }
@@ -1570,14 +1742,9 @@ a, p{
         padding: 64px 5vw;
         height: 65vh;
         width: 100vw;
+        gap: 24px;
     }
-    
-    .case_section5{
-        padding: 64px 5vw;
-        height: calc(150vh - 64px);
-        width: 100vw;
-        position: relative;
-    }
+
 
     .case_titles{
         position: static;
@@ -1602,7 +1769,6 @@ a, p{
     }
 
     .text2{
-        padding-top: 48px;
         width: 100vw;
         max-width: none;
     }
@@ -1610,6 +1776,10 @@ a, p{
     .text2 h3{
         font-size: 24px;
         font-weight: 40px;
+    }
+    
+    .clothes_xo{
+        background-color: #500084;
     }
     
     
