--- a/style.css
+++ b/style.css
@@ -412,6 +412,9 @@ footer{
     line-height: 18px;
 }
 
+
+
+
 .banner1{
     width: 45vw;
     max-width: 600px;
@@ -452,7 +455,7 @@ footer{
     color: grey;
 }
 
-h1, h2, h3, h4{
+h1, h2, h3, h4, h5{
     font-family: 'Space Grotesk', Arial, sans-serif;
 }
 
@@ -483,9 +486,17 @@ h3{
 }
 
 h4{
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 700;
-    line-height: 32px;
+    line-height: 24px;
+}
+
+h5{
+    text-align: left;
+    font-size: 16px;
+    font-weight: 600px;
+    line-height: 48px;
+    color: #222222;
 }
 
 a, p{
@@ -596,7 +607,6 @@ a, p{
 }
 
 .case_section3, .case_section4{
-    background-color: #373D20;
     color: #FFFFFF;
 }
 
@@ -613,13 +623,31 @@ a, p{
     padding: 80px 10vw;
 }
 
+.case_section6{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: fit-content;
+    padding: 80px 10vw;
+    align-items: center;
+    justify-content: stretch;
+    gap: 32px;
+}
+
+.case_section6 .hero_title{
+    max-width: 500px;
+    padding: 0;
+}
+
 .case_titles{
     padding-top: 80px;
     width: fit-content;
+    max-width: 180px;
     height: fit-content;
     position: absolute;
     left: 10vw;
     top: 0;
+    text-align: left;
 }
 
 .case_section5 .case_titles{
@@ -634,6 +662,11 @@ a, p{
     font-size: 18px;
     line-height: 24px;
     font-weight: 800;
+}
+
+.case_section6 .case_titles{
+    padding-top: 88px;
+    padding-left: 0;
 }
 
 .text1, .text2{
@@ -652,8 +685,7 @@ a, p{
 }
 
 .text1{
-    width: 80vw;
-    max-width: 900px;
+    max-width: 600px;
 }
 
 .text2{
@@ -682,10 +714,8 @@ a, p{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 10vw;
     width: 100%;
     height: 100%;
-    background-color: #373D20;
 }
 
 .image2{
@@ -695,6 +725,40 @@ a, p{
     width: 100%;
     height: 100%;
 }
+
+.image3{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 48px;
+}
+
+.image3 section{
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    width: 80vw;
+    height: calc(100vh - 64px);
+    object-position: center;
+    object-fit: contain;
+    background-repeat: no-repeat;
+}
+
+#journey1{
+    background-image: url(Image/holdjourney.png);
+}
+
+#journey2{
+    background-image: url(Image/holdjourney.png);
+}
+
+#journey3{
+    background-image: url(Image/holdjourney.png);
+}
+
 
 .grid1{
     display: grid;
@@ -715,11 +779,43 @@ a, p{
     width: 100%;
     height: 100%;
     gap: 32px;
-    padding: 0 10vw;
 }
 
 .grid2 section{
     background-color: #EFF1ED;
+    padding: 8px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    align-items: flex-start;
+    text-align: left;
+    gap: 8px;
+    width: 100%;
+}
+
+.grid2 section section{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: start;
+    padding: 0;
+    gap: 16px;
+}
+
+.grid2 img{
+    height: 36px;
+    width: auto;
+}
+
+.grid2 p{
+    width: auto;
+}
+
+.grid2 .tags{
+    background-color: #500084;
+    color: #FFFFFF;
+    width: fit-content;
+    padding: 8px;
 }
 
 .grid1_item1{
@@ -765,6 +861,45 @@ a, p{
 
 .clothes_xo{
     background-color: #500084;
+    color:#FFFFFF
+}
+
+.white_text{
+    color: #FFFFFF;
+}
+
+.case_section1 .case_titles .white_text{
+    color: #FFFFFF;
+}
+
+.case_section1 .case_titles{
+    max-width: 320px;
+}
+
+.padding{
+    padding-right: 10vw;
+}
+
+.padding2{
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+
+.fit{
+    height: fit-content;
+}
+
+#fit1{
+    height: fit-content;
+}
+
+#fit2{
+    height: fit-content;
+}
+
+#fit2{
+    height: fit-content;
 }
 
  /* 
@@ -878,7 +1013,7 @@ a, p{
 .case_section5 .hero_title{
     max-width: 60vw;
     min-width: 500px;
-    padding: 12px 0 32px 0;
+    padding: 8px 0 32px 0;
 }
 
 .hero_title p{
@@ -927,6 +1062,11 @@ a, p{
     gap: 64px;
 }
 
+.case_section6{
+    padding: 80px 5vw;
+    gap: 32px;
+}
+
 .case_titles{
     padding-top: 64px;
     left: 5vw;
@@ -934,8 +1074,7 @@ a, p{
 
 .text1{
     padding-left: 5vw;
-    width: 80vw;
-    max-width: 900px;
+    max-width: 480px;
 }
 
 .text2{
@@ -953,6 +1092,19 @@ a, p{
 }
 
 
+#journey1{
+    background-image: url(Image/holdjourney.png);
+}
+
+#journey2{
+    background-image: url(Image/holdjourney.png);
+}
+
+#journey3{
+    background-image: url(Image/holdjourney.png);
+}
+
+
 .grid1{
     padding: 64px 5vw 64px 5vw;
     gap: 32px;
@@ -960,10 +1112,35 @@ a, p{
 
 .grid2{
     padding: 0;
+    gap: 16px;
 }
 
 .clothes_xo{
     background-color: #500084;
+    color: #FFFFFF;
+}
+
+.padding{
+    padding-right: 5vw;
+}
+
+.padding2{
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
+
+
+
+.fit{
+    height: fit-content;
+}
+
+#fit1{
+    height: fit-content;
+}
+
+#fit2{
+    height: fit-content;
 }
 
 
@@ -977,7 +1154,7 @@ a, p{
 }
 
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:900px) {
                 
     nav{
         flex-direction: column;
@@ -1296,8 +1473,15 @@ a, p{
     }
     
     h4{
-        font-size: 20px;
+        font-size: 16px;
         font-weight: 800;
+        line-height: 24px;
+    }
+
+    h5{
+        text-align: left;
+        font-size: 16px;
+        font-weight: 560px;
         line-height: 32px;
     }
 
@@ -1327,7 +1511,7 @@ a, p{
     justify-content: center;
     padding: 12px 5vw 48px 5vw;
     width: 100vw;
-    max-width: fit-content;
+    max-width: none;
     min-width: fit-content;
 }
 
@@ -1395,6 +1579,23 @@ a, p{
     gap: 32px;
 }
 
+.case_section1{
+    height: fit-content;
+    min-height: none;
+}
+
+.fit{
+    height: fit-content;
+}
+
+#fit1{
+    height: fit-content;
+}
+
+#fit2{
+    height: fit-content;
+}
+
 .case_section2{
     flex-direction: column;
     height: fit-content;
@@ -1405,6 +1606,8 @@ a, p{
     padding: 80px 5vw;
     gap: 32px;
 }
+
+
 
 .case_section4{
     flex-direction: column;
@@ -1426,14 +1629,47 @@ a, p{
     text-align: left;
 }
 
+.image3{
+    width: 100%;
+    height: auto;
+    gap: 32px;
+}
+
+.image3 section{
+    width: 100%;
+    height: calc(100vh - 64px);
+    object-fit: contain;
+    object-position: center;
+    background-repeat: no-repeat;
+    background-color: aqua;
+}
+
+#journey1{
+    background-image: url(Image/holdjourneymobile.png);
+}
+
+#journey2{
+    background-image: url(Image/holdjourneymobile.png);
+}
+
+#journey3{
+    background-image: url(Image/holdjourneymobile.png);
+}
+
 .case_titles{
     position: static;
-    padding: 48px 0 16px 5vw;
+    padding: 0 5vw 16px 5vw;
     align-self: flex-start;
     text-align: left;
+    width: 100vw;
+    max-width: none;
 }
 
 .case_section5 .case_titles{
+    padding: 0 0 16px 0;
+}
+
+.case_section6 .case_titles{
     padding: 0 0 16px 0;
 }
 
@@ -1448,7 +1684,7 @@ a, p{
 
 
 .text1{
-    padding-left: 5vw;
+    padding: 0 5vw;
     width: 100vw;
     max-width: 640px;
 }
@@ -1459,7 +1695,7 @@ a, p{
 }
 
 .text2{
-    padding-left: 5vw;
+    padding: 0 5vw;
     width: 400px;
     max-width: none;
 }
@@ -1467,7 +1703,7 @@ a, p{
 .text3{
     display: flex;
     width: 90vw;
-    padding-left: 5vw;
+    padding: 0 5vw;
 }
 
 
@@ -1480,16 +1716,23 @@ a, p{
     padding: 0;
 }
 
+.grid2 section{
+    padding: 24px;
+}
 
 .clothes_xo{
     background-color: #500084;
+    color: #FFFFFF;
 }
 
+.padding{
+    padding-right: 5vw;
+}
  /* 
 
     */
 
-/*Case Study Template End* 768px*/
+/*Case Study Template End* 900px*/
 
 }
 
@@ -1499,9 +1742,6 @@ a, p{
         min-height: 900px;
     }
 
-.case_section1{
-        min-height: 1200px;
-    }
     
     .case_section5{
         min-height: 1200px;
@@ -1510,14 +1750,18 @@ a, p{
     }
     
     .case_section5 .hero_title{
-        padding: 12px 0 48px 0;
+        padding: 12px 5vw 48px 0;
         width: auto;
-        max-width: 360px;
+        max-width: auto;
         min-width: none;
     }
 
     .hero_title p{
         max-width: 320px;
+    }
+
+    .case_section6 .hero_title{
+        padding-left: 5vw;
     }
     
     .grid1_item1{
@@ -1554,6 +1798,18 @@ a, p{
     
     .grid2_item5{
         grid-area: 5 / 1 / 6 / 2;
+    }
+
+    .fit{
+        height: fit-content;
+    }
+    
+    #fit1{
+        height: fit-content;
+    }
+
+    #fit2{
+        height: fit-content;
     }
 }
 
@@ -1712,12 +1968,7 @@ a, p{
         line-height: 32px;
         padding: 8px 0 16px 0;
     }
-    
-    h4{
-        font-size: 24px;
-        font-weight: 800;
-        line-height: 50px;
-    }
+
 
     a, p{
         font-size: 14px;
@@ -1734,6 +1985,8 @@ a, p{
         gap: 24px;
     }
 
+
+
     .case_section2{
         gap: 24px;
     }
@@ -1748,7 +2001,7 @@ a, p{
 
     .case_titles{
         position: static;
-        padding: 40px 0 16px 5vw;
+        padding: 0 0 16px 5vw;
     }
     
     .case_titles p{
@@ -1758,7 +2011,7 @@ a, p{
     }
     
     .text1{
-        padding-left: 5vw;
+        padding: 0 5vw;
         width: 100vw;
         max-width: none;
     }
@@ -1780,8 +2033,24 @@ a, p{
     
     .clothes_xo{
         background-color: #500084;
+        color: #FFFFFF;
+    }
+
+    .white_text{
+        color: #FFFFFF;
     }
     
+    .fit{
+        height: fit-content;
+    }
+    
+    #fit1{
+        height: fit-content;
+    }
+
+    #fit2{
+        height: fit-content;
+    }
     
     /*Case Study Template Ends *430px*/
 }
