--- a/style.css
+++ b/style.css
@@ -177,6 +177,10 @@ nav{
     top: 0;
 }
 
+#image_mock, #image_mock1{
+    display: none;
+}
+
 #hero_mock section{
     width: 100%;
     height: calc(100vh - 64px);
@@ -1984,29 +1988,72 @@ a, p{
         flex-direction: column;
         align-items: start;
         padding: 0;
-        max-height: 720px;
+        height: fit-content;
         overflow-x: hidden;
-
+        position: static;
     }
     
     .hero_container{
         align-items: start;
-        width: 70%;
+        width: 100%;
         height: fit-content;
         padding: 104px 64px 64px 5vw;
     }
 
-    .hero #hero_mock, .hero #hero_mock1{
+    .hero #hero_mock{
         display: flex;
         flex-direction: row;
         justify-content: start;
         height: 60vh;
-        width: fit-content;
-        position: absolute;
-        top: 40vh;
+        width: 100%;
         gap: 0;
         padding: 0;
         z-index: 2;
+    }
+
+    .hero #hero_mock1{
+        display: none;
+    }
+
+
+    
+    #image_mock, #image_mock1{
+        display: none;
+        flex-direction: column;
+        justify-content: start;
+        height: 70vh;
+        width: 90vw;
+        padding: 0;
+        overflow-y: hidden;
+    }
+
+    #image_mock section, #image_mock1 section{
+        width: 90vw;
+        height: 70vh;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .case_section7{
+        padding: 64px 5vw;
+    }
+
+    .case_section7 .case_titles{
+        position: static;
+        left: 0;
+        padding: 0;
+    }
+
+    .text5{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 16px;
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+        text-align: left;
     }
 
 
@@ -2015,7 +2062,7 @@ a, p{
         height: 60vh;
         background-position: center center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
     }
 
     .hero #hero_mock1 section{
@@ -2023,7 +2070,7 @@ a, p{
         height: 60vh;
         background-position: center center;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
     }
 
     .hero #hero_mock section:nth-of-type(1){
@@ -2050,12 +2097,33 @@ a, p{
         background-image: url(Images/556A7084.jpg);
     }
 
+    #image_mock section:nth-of-type(1), #image_mock1 section:nth-of-type(1){
+        background-image: url(Images/556A7070.jpg);
+    }
+    
+    #image_mock section:nth-of-type(2), #image_mock1 section:nth-of-type(2){
+        background-image: url(Images/556A7079.jpg);
+    }
+    
+    #image_mock section:nth-of-type(3), #image_mock1section:nth-of-type(3){
+        background-image: url(Images/556A7084.jpg);
+    }
+
    @keyframes slider4 {
         0%{transform: translateX(0);}
         100%{transform: translateX(300vw);}
     }
     
     .slide3{
+        animation: slider4 9s steps(3) backwards infinite;
+    }
+
+    @keyframes slider5 {
+        0%{transform: translateY(0);}
+        100%{transform: translateY(210vh);}
+    }
+    
+    .slide5{
         animation: slider4 9s steps(3) backwards infinite;
     }
 
@@ -2841,7 +2909,7 @@ a, p{
     
     .hero_container{
         align-items: start;
-        width: 100%;
+        width: 90vw;
         height: 60%;
     }
 
@@ -3077,6 +3145,16 @@ a, p{
 
     .white_text{
         color: #FFFFFF;
+    }
+
+    .paragraph_limit{
+        width: 90vw;
+    }
+
+    .paragraph_limit h2{
+        font-size: 40px;
+        line-height: 60px;
+        font-weight: 700px;
     }
 
     
